# parasite

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  backtrace  process.sh
data/: README.md
docs/: ARCHITECTURE.md  REQUIREMENT.md
src/: main.rs
